--- a/ApotekaApp/src/main/resources/application.properties
+++ b/ApotekaApp/src/main/resources/application.properties
@@ -34,12 +34,9 @@ spring.datasource.initialization-mode=always
 #Hibernate optimizacija SQL upita za Postgres bazu
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
 
-spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
 
 spring.mail.host=smtp.office365.com
-spring.mail.password=Nestonesto1
+spring.mail.password=clearnesto2
 spring.mail.port=587
 spring.mail.username=bsepmejl@outlook.com
 spring.mail.properties.mail.smtp.starttls.enable=true
