--- a/ApotekaApp/src/main/resources/application.properties
+++ b/ApotekaApp/src/main/resources/application.properties
@@ -6,10 +6,10 @@ spring.datasource.platform=postgres
 
 #Navodi se URL do baze koja je pokrenuta u lokalu na podrazumevanom portu 5432 i na serveru je kreirana ?ema baze pod nazivom "jpa"
 #https://www.pgadmin.org/docs/pgadmin4/4.14/schema_dialog.html (ako koristimo Hibernate za kreiranje tabela, SQL deo sa linka nije potreban)
-spring.datasource.url=jdbc:postgresql://localhost:5432/tijana
+spring.datasource.url=jdbc:postgresql://localhost:5432/jpa_projekat
 
 #Navode se kredencijali za konekciju na server baze
-spring.datasource.username=sara
+spring.datasource.username=jovana
 spring.datasource.password=isamrs
 
 spring.jpa.properties.hibernate.default_schema: public
